<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hint_email">Digite seu email</string>
    <string name="hint_password">Digite sua senha</string>
    <string name="login_button">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Cadastrar</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_description">Seja bem vindo ao aplicativo de loja de sapatos feito para o nanodegree da udacity</string>
    <string name="button_next">Próximo</string>
    <string name="instructionTitle">Instruções</string>
    <string name="instructionDescription">Ao clicar em um item da lista, será direcionado para tela de detalhes</string>
    <string name="instructionButton">Concluir</string>
    <string name="details">Detalhes</string>
    <string name="name">Nome:</string>
    <string name="size">Tamanho:</string>
    <string name="company">Empresa:</string>
    <string name="description">Descrição:</string>
    <string name="hintName">Nome</string>
    <string name="hintSize">Tamanho</string>
    <string name="hintCompany">Empresa</string>
    <string name="hintDescription">Descrição</string>
    <string name="add">Adicionar</string>

</resources>