<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="controller"
            type="com.example.shoestore.form.FormFragment" />

        <variable
            name="shoe"
            type="com.example.shoestore.home.model.Shoe" />
    </data>

    <!-- The constraintlayout was used because it is a more complex screen with several elements that align -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".form.FormFragment">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hintName"
            android:text="@={shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/hintSize"
            android:text="@={shoe.size}"
            app:layout_constraintEnd_toEndOf="@+id/editTextName"
            app:layout_constraintStart_toStartOf="@+id/editTextName"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/editTextCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hintCompany"
            android:text="@={shoe.company}"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/editTextNumber"
            app:layout_constraintStart_toStartOf="@+id/editTextNumber"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hintDescription"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="@+id/editTextCompany"
            app:layout_constraintStart_toStartOf="@+id/editTextCompany"
            app:layout_constraintTop_toBottomOf="@+id/editTextCompany" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/add"
            android:onClick="@{() -> controller.submit()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>